--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -1,8 +1,9 @@
 <ion-view view-title="Account">
   <ion-content>
-    <div style="margin: 1rem; auto; text-align: center;">
-      <a class="button button-small button-outline button-positive"
-         href="#" onclick="window.open('https://wakatime.com/settings#apikey', '_blank'); return false;">Launch WakaTime Account Settings</a>
+    <div class="api-link-section">
+      <p>This app uses your WakaTime API key to display your dashboard stats</p>
+      <button class="button button-small button-outline button-positive"
+         href="#" onclick="window.open('https://wakatime.com/settings#apikey', '_blank'); return false;">Launch WakaTime account settings to get your API key</button>
     </div>
     <form name="SettingsForm" novalidate>
         <ion-list>
