--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -23,3 +23,4 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+@import "scss/_app";
